postgresql-common (137) UNRELEASED; urgency=low

  * debian/backport-ppa: Disable xz compression for lucid.
  * debian/backport-ppa: Disable libraries for -9.1/natty as well, built by
    9.2 now.
  * debian/backport-ppa: Ensure that backport PPA versions are always smaller
    than the versions in -updates.
  * pg_wrapper: Always use the latest available client version of "psql"
    instead of the target cluster's. psql is backwards compatible to all major
    versions that we support in any release. Update tests to use "createdb"
    instead of "psql" for --version tests, and add a new test for the psql
    special case to t/020_create_sql_remove.t. (Closes: #639108)
  * debian/postgresql-common.triggers: Also watch for changes in
    /usr/share/hunspell/; pg_updatedicts handles these as well.
    (Closes: #689994)

 -- Martin Pitt <mpitt@debian.org>  Tue, 25 Sep 2012 07:00:30 +0200

postgresql-common (136) experimental; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Do first upload with orig tarball, subsequent ones
    without.
  * debian/backport-ppa: Do not run lintian.
  * debian/backport-ppa: When building postgresql-9.1 for lucid, drop the
    library packages as they collide with the ones built from postgresql-9.2.
  * debian/backport-ppa: Build 9.2 for Quantal and Natty.
  * debian/supported-versions: Add Ubuntu 12.10.
  * t/030_errors.t: For the "fails on insufficient disk space test", move from
    setting up a loop device to a tmpfs in unshare -m. This is more robust for
    cleaning up after itself, and faster as well.
  * pg_ctlcluster: Fix log output to stderr if the log file started out being
    empty. Add test case to t/030_errors.t.
  * debian/maintscripts-functions: Only try to remove the tsearch_data
    directory  if it already exists. Thanks Peter Palfrader. (Closes: #688105)

  [ Christoph Berg ]
  * pg_buildext: Fix supported-versions not to die when the last version is
    not supported.